css/media.css
/* ... */
.titrecarte {
    color: var(--cardIcons);
}

/*************************** monEspace et Formulaire de gestion du profile ****************************/

.formCentered {
    width: 90%;
}

#msg { /* message de saisie de champ obligatoire */
    color: rgb(255, 0, 0);
    font-size: larger;
    font-weight:900;
}

.inputMonEspace {
    width: 100%;
    padding: 12px;
    border: 1px solid #4d4848;
    border-radius: 5px;
    resize: vertical;
}

label {
    padding: 9px 0;
    display: block; /* Assure que le label occupe toute la largeur disponible */
}

.monEspace {
    margin: auto 0 auto 7px;
}

.br { /* espacement entre les boutons extensible */
    display: block;
    margin-bottom: 1em;
}

button.btnBase.blue, button.btnBase.vert {
    margin-left: 5px;
}

/* collabel et colinput font reference à un affichage en "colonnes" ecran>600px */
.collabel {
    float: left;
    width: 25%;
    margin-top: 10px;
    margin-left: 10px;
}

.colinput {
    float: left;
    width: 65%;
    margin-top: 10px;
}

.rowEspace:after { /* Clear floats - colonnes du formulaire (labels-inputs) */
    content: "";
    display: table;
    clear: both;
}

/************************************ Tableaux CRUD ***************************************/

thead, tfoot {
    background-color: #75b3ce;
    color: #000000;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
    width: 100%;
    /* border: 1px solid #886780; */
    margin-top: 30px;
}

th, td {
    border: 1px solid #46443a;
    padding: 16px;
}

th, td.action { /* td.action spécifié dans la fonction fetchAllMusics dans appCRUD.js */
    text-align: center;
}

tr:nth-child(even) { /* alternance de couleurs entre les lignes du tableau */
    background-color: #a39d9d;
}

.tabloList {
    text-align: start;
    padding-left: 20px;
}

/************************************ collapse ***************************************/
.collapsible {
    background-color: var(--active);
    color: #f5f5f5;
    cursor: pointer;
    padding: 15px;
    width: 100%;
    border: none;
    text-align: left;
    outline: none;
    font-size: 25px;
    border-radius: 15px 15px 0 0;
}

.activeCollapse, .collapsible:hover {
    background-color: var(--violet);
}

.collapsible:after {
    content: '\2B9F';
    color: #f5f5f5;
    font-weight: bold;
    float: right;
    margin-left: 5px;
}

.activeCollapse:after {
    content: "\2B9D";
}

.contentCollapse {
    padding: 1px; /* Xpx débordement bas pour révéler la pliure */
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.2s ease-out;
    background-color: #c0bcad;
    border-bottom: 6px solid #000dc7;
    border-radius: 0 0 10px 10px;
}

/************************************ Le Pied... ***************************************/
footer {
    height: 80px;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    margin: 40px 0 0 0;
}

.socle {
    position: absolute;
    width: 100%;
    height: 80px;
    /* background-color: #7eaa19; */
    /* border-radius: 0 0 20px 20px; */
}

/******************************* breakpoints - @media queries ***************************/

/******************** Small  (smartphone - moins de 600px) */
@media (max-width: 600px) {
    body {
        width: 98%;
        margin: 0 0 220px 0;
    }
    .boutonTheme {
        display: none;
    }
    .menunav a:not(:first-child) {
        display: none;
    }
    .menunav a.menuicon {
        float: right;
        display: block;
    }
    .menunav.break {
        position: relative;
    }
    .menunav.break .menuicon {
        position: absolute;
        right: 0;
        top: 0;
    }
    .menunav.break a {
        float: none;
        display: block;
        text-align: left;
    }
    .menunav a.barefut {
        display: none;
    }
    .searchBox:hover>.searchInput {
        width: 150px;
        padding: 0 6px;
    }
    .column {
        width: 43%;
        display: block;
        margin-bottom: 20px;
    }
    .card {
        height: 160px;
        border-radius: 15px;
    }
    .card i {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        font-size: 100px;
    }
    .titrecarte {
        display: none;
    }
    .collabel, .colinput { /* Formulaire Mon Espace -Responsive- passage de 2 colonnes à width:100% */
        width: 93%;
        margin-top: 0;
    }
    .socle {
        background-color: #919094;
        height: 70px;
        box-shadow: var(--footerShadow);
    }
    .socleRadiusUp {
        display: none;
    }
    footer { /* fixer le footer au bas de l'écran pour tabbar */
        position: fixed;
        bottom: 0;
        width: 100%;
        height: 70px;
        margin: 0;
    }
    .txtfootr {
        display: none;
    }
    .icon-bar, a.navlabel {
        color: #000000;
        display: flex;
        overflow-x: auto;
        padding: 5px;
    }
    .navlabel {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        flex-grow: 1;
        min-width: 50px;
        overflow: hidden;
        white-space: nowrap;
        font-size: 14px;
        transition: all 0.3s ease-in-out;
    }
    .icon-bar .material-icons {
        font-size: 28px;
    }
    .iconeTheme {
        color: var(--btnFontColor);
    }
}
/* ... */

